crates/borrowme/tests/ui/lifetime_hint.stderr
error: #[borrowme]: lifetime not supported.
 --> tests/ui/lifetime_hint.rs:8:9
  |
8 |     b: &'b str,
  |         ^^

error: Hint: add #[owned(ty = <type>)] to specify which type to override this field with
 --> tests/ui/lifetime_hint.rs:8:5
  |
8 |     b: &'b str,
  |     ^
